@@ -12,13 +12,11 @@ function s = position_state(q, n)
 
 ket = zeros(n, 1);
 
-temp = sqrt(2)*q;
-
 ket(1) = 1; % arbitrary
-ket(2) = temp * ket(1);
+ket(2) = q * ket(1);
 for k=3:n
   nn = k-1; % occupation number for ket(k) (MATLAB indexing!)
-  ket(k) = temp/sqrt(nn) * ket(k-1) -sqrt((nn-1)/nn) * ket(k-2);
+  ket(k) = q/sqrt(nn) * ket(k-1) -sqrt((nn-1)/nn) * ket(k-2);
 end
 
 ket = ket/norm(ket);
