@@ -217,6 +217,8 @@ b bugfix
               + markov/bath.plot_cutoff
               + markov/components
               * hamiltonian/jaynes_cummings:  allow multiple modes as well as multiple atoms.
+              * ho: P,Q scaling changed, now <0|Q^2|0> = <0|P^2|0> = 1.
+              + utils/test_ho
               + utils/cm_phase
               + utils/R_SO3
               + utils/wigner3j
